# akai

./: CMakeLists.txt  Makefile  README.md  conanfile.py
src/: config.hpp  lib.hpp  main.cpp
src/app/: app.cpp  app.hpp
src/app/function/: function.cpp  function.hpp  parser.cpp  parser.hpp  variable.hpp  variables.hpp
src/app/state/: state.hpp
src/app/ui/: components.hpp  renderable.hpp  ui.cpp  ui.hpp
src/app/ui/components/: input.hpp
src/app/ui/graphic/: graphic.hpp
src/global/: types.hpp
src/lib/: debug.hpp  enum.hpp  log.hpp  logger.cpp  logger.hpp  prelude.hpp  ptr.hpp  serialize.hpp  smart_pointers.hpp  utils.hpp
